--- a/html/quemSou.html
+++ b/html/quemSou.html
@@ -28,8 +28,10 @@
                 <h1 class="h1">Quem sou</h1>
                 <p>Meu nome é Bruno Pereira, tenho 20 anos, solteiro, sem filhos e estou cursando análise e
                     desenvolvimento de sistemas EAD, estou no ultimo semestre.
-                    Desde de pequeno gostava da parte de hardware do computador, mas após um tempo na faculdade comecei a me interessar pela parte de desenvolvimento.
-                    No ultimo estágio que participei, pensei que iria ter um contato maior com tecnologia, porém foi uma experiencia mais administrativa do que propriamente tecnológica.
+                    Desde de pequeno gostava da parte de hardware do computador, mas após um tempo na faculdade comecei
+                    a me interessar pela parte de desenvolvimento.</br>
+                    No ultimo estágio que participei, pensei que iria ter um contato maior com tecnologia, porém foi uma
+                    experiencia mais administrativa do que propriamente tecnológica.</br>
                     Tenho conhecimento em algumas tecnologias como java, Spring Framework, Junit,
                     HTML5, CSS, Github. Possuo conhecimento em inglês nivel básico/intermediario.
                 </p>
@@ -77,26 +79,32 @@
                 <ul class="quemSou-ul-formacao-complementar">
 
                     <li>
-                        <a href="https://www.udemy.com/course/java-curso-completo/" target="_blank" title="Link para o curso">Java Completo Programação Orientada a Objetos (2020)
+                        <a href="https://www.udemy.com/course/java-curso-completo/" target="_blank"
+                            title="Link para o curso">Java Completo Programação Orientada a Objetos (2020)
                             <i class="fas fa-external-link-alt"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.udemy.com/course/spring-boot-ionic/" target="_blank" title="Link para o curso">Spring Boot (2020)
+                        <a href="https://www.udemy.com/course/spring-boot-ionic/" target="_blank"
+                            title="Link para o curso">Spring Boot (2020)
                             <i class="fas fa-external-link-alt"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.udemy.com/course/testes-unitarios-em-java/" target="_blank" title="Link para o curso">Testes unitários em JAVA: JUnit, Mockito e TDD (2020)
+                        <a href="https://www.udemy.com/course/testes-unitarios-em-java/" target="_blank"
+                            title="Link para o curso">Testes unitários em JAVA: JUnit, Mockito e TDD (2020)
                             <i class="fas fa-external-link-alt"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.udemy.com/course/curso-web/" target="_blank" title="Link para o curso">Web Moderno Completo com JavaScript (Em progresso)
+                        <a href="https://www.udemy.com/course/curso-web/" target="_blank" title="Link para o curso">Web
+                            Moderno Completo com JavaScript (Em progresso)
                             <i class="fas fa-external-link-alt"></i>
                         </a></li>
-                        <li>
-                        <a href="https://www.udemy.com/course/design-de-apis-restful-com-tdd-spring-boot-e-junit-5/" target="_blank" title="Link para o curso">Design de API's RestFul com Spring Boot, TDD e JUnit5 (Em progresso)
+                    <li>
+                        <a href="https://www.udemy.com/course/design-de-apis-restful-com-tdd-spring-boot-e-junit-5/"
+                            target="_blank" title="Link para o curso">Design de API's RestFul com Spring Boot, TDD e
+                            JUnit5 (Em progresso)
                             <i class="fas fa-external-link-alt"></i>
                         </a>
                     </li>
@@ -105,7 +113,8 @@
                 <h5 class="h5">Cursos(Online) - Softblue</h4>
                     <ul class="quemSou-ul-formacao-complementar">
                         <li>
-                            <a href="https://www.softblue.com.br/site/curso/id/3/CURSO+DE+SQL+COMPLETO+BASICO+AO+AVANCADO+ON+LINE+BD03+GRATIS" target="_blank" title="Link para o curso">SQL Completo (2019)
+                            <a href="https://www.softblue.com.br/site/curso/id/3/CURSO+DE+SQL+COMPLETO+BASICO+AO+AVANCADO+ON+LINE+BD03+GRATIS"
+                                target="_blank" title="Link para o curso">SQL Completo (2019)
                                 <i class="fas fa-external-link-alt"></i>
                             </a>
                         </li>
@@ -113,34 +122,36 @@
         </section>
 
         <section class="quemSou-section-contato">
-            <img src="../imagens/avatares/avatar01.png" id="contato-img" alt="imagem com homem de oculos sorrindo"
-                class="img-fluid quemSou-contato-img">
-            <h5 id="contato" class="h5">Contato</h5>
-            <ul class="quemsou-ul-contato">
-                <li>
-                    <a href="https://www.linkedin.com/in/brunopereira-2331/" target="_blank">
-                        <i class="fab fa-linkedin fa-fw"></i>Linkedin
-                    </a>
-                </li>
-                <li>
-                    <a href="https://github.com/BrunoPereira-2331" target="_blank">
-                        <i class="fab fa-github fa-fw"></i>Github
-                    </a>
-                </li>
-                <li>
-                    <a href="mailto:brunopereira.19@hotmail.com">
-                        <i class="fas fa-envelope fa-fw"></i>brunopereira.19@hotmail.com
-                    </a>
-                </li>
-                <li>
-                    <i class="fas fa-mobile-alt fa-fw"></i>(51)999341544
-                </li>
-                <li>
-                    <a href="https://wa.me/send?phone=5551999341544" target="_blank">
-                        <i class="fab fa-whatsapp fa-fw"></i>Me envie uma mensagem
-                    </a>
-                </li>
-            </ul>
+            <div class="container">
+                <img src="../imagens/avatares/avatar01.png" id="contato-img" alt="imagem com homem de oculos sorrindo"
+                    class="img-fluid quemSou-contato-img">
+                <h5 id="contato" class="h5">Contato</h5>
+                <ul class="quemsou-ul-contato">
+                    <li>
+                        <a href="https://www.linkedin.com/in/brunopereira-2331/" target="_blank">
+                            <i class="fab fa-linkedin fa-fw"></i>Linkedin
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/BrunoPereira-2331" target="_blank">
+                            <i class="fab fa-github fa-fw"></i>Github
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:brunopereira.19@hotmail.com">
+                            <i class="fas fa-envelope fa-fw"></i>brunopereira.19@hotmail.com
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fas fa-mobile-alt fa-fw"></i>(51)999341544
+                    </li>
+                    <li>
+                        <a href="https://wa.me/send?phone=5551999341544" target="_blank">
+                            <i class="fab fa-whatsapp fa-fw"></i>Me envie uma mensagem
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
