--- a/index.html
+++ b/index.html
@@ -1,46 +1,153 @@
 <!doctype html>
 <html lang="pt-br">
+
 <head>
-    <title>Estudante</title>
+    <title>Quem Sou</title>
     <meta charset="utf-8">
-    <meta name="author" content="Bruno Pereira & Valnei Pereira">
-    <meta name="description" content="Descrição da pagina">
-    <meta name="keywords" content="HTML5, CSS & javascript">
+    <meta name="author" content="Bruno Pereira">
+    <meta name="description" content="Descrição de caracteristicas, habilidades e experiencias.">
+    <meta name="keywords" content="Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
+
 </head>
 
-<body id="index-body">
-    <header class="index-header">
-        <div class="container">
-            <nav class="navbar navbar-expand-md">
-                <ul class="navbar-nav mx-auto">
-                    <li class="index-nav-ul-li nav-link">
-                        <a href="html\quemSou.html">Quem sou</a></li>
-                    <li class="index-nav-ul-li nav-link">
-                        <a href="html\quemSou.html#experiencias">Experiencias</a></li>
-                    <li class="index-nav-ul-li nav-link">
-                        <a href="html\quemSou.html#contato">Contato</a></li>
-                </ul>
-            </nav>
+<body id="body">
+    <header class="header">
+        <div class="header-div">
+            <img src="imagens/avatares/avatar01.png" id="contato-img" class="header-avatar-img">
+            <h1>Bruno Pereira</h1>
         </div>
+        <nav class="header-nav-menu">
+            <ul header-ul>
+                <li>
+                    <a href="https://www.linkedin.com/in/brunopereira-2331/" target="_blank">
+                        <i class="fab fa-linkedin fa-fw"></i>Linkedin
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/BrunoPereira-2331" target="_blank">
+                        <i class="fab fa-github fa-fw"></i>Github
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:brunopereira.19@hotmail.com">
+                        <i class="fas fa-envelope fa-fw"></i>brunopereira.19@hotmail.com
+                    </a>
+                </li>
+                <li>
+                    <i class="fas fa-mobile-alt fa-fw"></i>(51)999341544
+                </li>
+                <li>
+                    <a href="https://wa.me/send?phone=5551999341544" target="_blank">
+                        <i class="fab fa-whatsapp fa-fw"></i>Me envie uma mensagem
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <section class="header-section">
+            <h1 class="h1">Quem sou</h1>
+            <p>Meu nome é Bruno Pereira, tenho 20 anos, solteiro, sem filhos e estou cursando análise e
+                desenvolvimento de sistemas EAD, estou no ultimo semestre.
+                Desde de pequeno gostava da parte de hardware do computador, mas após um tempo na faculdade
+                comecei
+                a me interessar pela parte de desenvolvimento.</br>
+                No ultimo estágio que participei, pensei que iria ter um contato maior com tecnologia, porém foi
+                uma
+                experiencia mais administrativa do que propriamente tecnológica.</br>
+                Tenho conhecimento em algumas tecnologias como java, Spring Framework, Junit,
+                HTML5, CSS, Github. Possuo conhecimento em inglês nivel básico/intermediario.
+            </p>
+        </section>
     </header>
-    
     <main>
-        <div class="index-main-div container">
-            <h1 class="index-main-h1 h1">Estudante de analise e desenvolvimento de sistemas</h1>
-        </div>
+        <section class="experiencias-section">
+            <h2 class="h2">Experiencias</h2>
+            <div class="experiencias-div-container">
+                <span class="button experiencias-btn-left"><i class="fas fa-angle-left"></i></span>
+                <div experiencias-div-slide>
+                    <div class="show">
+                        <h3 class="h3">NTConsult</h3>
+                        <h4 class="h4">Cargo: Estagiario</h4>
+                        <p>Data de entrada: 10/12/2018 & Data de saida: 15/04/2019</p>
+                        <p class="experiencia-p-desc">Durante esse periodo tive as seguintes atribuições: Análise de
+                            consistência de registros de
+                            base
+                            de dados de catálogo de itens,
+                            Pesquisa de informações técnicas de registros na internet e em banco de dados,
+                            Coleta de evidências relacionadas às pesquisas, Confronto entre os padrões descritivos e as
+                            informações pesquisadas,
+                            Apontamento textual de inconformidades encontradas,
+                            Registro das informações encontradas em planilhas e documentos específicos.
+                        </p>
+                    </div>
+                    <div class="show">
+                        <h3 class="h3">Grupo Dimed</h3>
+                        <h4 class="h4">Cargo: Jovem Aprendiz</h4>
+                        <p>Data de entrada: 13/03/2017 & Data de saida: 26/03/2018</p>
+                        <p class="experiencia-p-desc">Durante esse periodo tive as seguintes atribuições: Recebimento e
+                            triagem dos produtos,
+                            armazenagem dos produtos em seu devido local,
+                            Ressuprimento dos produtos em caixas bin, expedição dos produtos.
+                        </p>
+                    </div>
+                </div>
+                <span class="button experiencias-btn-right"><i class="fas fa-angle-right"></i></span>
+            </div>
+        </section>
+        <section class="formacao-complementar-section">
+            <h3 class="h3">Formações complementares relevantes</h3>
+            <div>
+                <h4 class="h4">Cursos(Online) - Udemy</h4>
+                <ul class="ul-formacao-complementar">
+                    <li>
+                        <a href="https://www.udemy.com/course/java-curso-completo/" target="_blank"
+                            title="Link para o curso">Java Completo Programação Orientada a Objetos (2020)
+                            <i class="fas fa-external-link-alt"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.udemy.com/course/spring-boot-ionic/" target="_blank"
+                            title="Link para o curso">Spring Boot (2020)
+                            <i class="fas fa-external-link-alt"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.udemy.com/course/testes-unitarios-em-java/" target="_blank"
+                            title="Link para o curso">Testes unitários em JAVA: JUnit, Mockito e TDD (2020)
+                            <i class="fas fa-external-link-alt"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.udemy.com/course/curso-web/" target="_blank" title="Link para o curso">Web
+                            Moderno Completo com JavaScript (Em progresso)
+                            <i class="fas fa-external-link-alt"></i>
+                        </a></li>
+                    <li>
+                        <a href="https://www.udemy.com/course/design-de-apis-restful-com-tdd-spring-boot-e-junit-5/"
+                            target="_blank" title="Link para o curso">Design de API's RestFul com Spring Boot, TDD e
+                            JUnit5 (Em progresso)
+                            <i class="fas fa-external-link-alt"></i>
+                        </a>
+                    </li>
+
+                </ul>
+                <h5 class="h5">Cursos(Online) - Softblue</h5>
+                    <ul class="ul-formacao-complementar">
+                        <li>
+                            <a href="https://www.softblue.com.br/site/curso/id/3/CURSO+DE+SQL+COMPLETO+BASICO+AO+AVANCADO+ON+LINE+BD03+GRATIS"
+                                target="_blank" title="Link para o curso">SQL Completo (2019)
+                                <i class="fas fa-external-link-alt"></i>
+                            </a>
+                        </li>
+                    </ul>
+        </section>
     </main>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+    </script>
+    <script src="js/carousel.js"></script>
+    <!-- <script src="../js/utils.js"></script> -->
+    <script src="js/main.js"></script>
 </body>
+
 </html>
-
-
