--- a/index.html
+++ b/index.html
@@ -46,6 +46,39 @@
                 </li>
             </ul>
         </nav>
+        <div class="header-hide-menu">
+            <div class="header-button-hide-menu">
+                <i class="fas fa-bars"></i>
+            </div>
+            <div class="header-items-hide-menu">
+                <ul header-ul-hide-menu>
+                    <li>
+                        <a href="https://www.linkedin.com/in/brunopereira-2331/" target="_blank">
+                            <i class="fab fa-linkedin fa-fw"></i>Linkedin
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/BrunoPereira-2331" target="_blank">
+                            <i class="fab fa-github fa-fw"></i>Github
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:brunopereira.19@hotmail.com">
+                            <i class="fas fa-envelope fa-fw"></i>brunopereira.19@hotmail.com
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fas fa-mobile-alt fa-fw"></i>(51)999341544
+                    </li>
+                    <li>
+                        <a href="https://wa.me/send?phone=5551999341544" target="_blank">
+                            <i class="fab fa-whatsapp fa-fw"></i>Me envie uma mensagem
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
         <section class="header-section">
             <h1 class="h1">Quem sou</h1>
             <p>Meu nome é Bruno Pereira, tenho 20 anos, solteiro, sem filhos e estou cursando análise e
@@ -134,19 +167,20 @@
 
                 </ul>
                 <h5 class="h5">Cursos(Online) - Softblue</h5>
-                    <ul class="ul-formacao-complementar">
-                        <li>
-                            <a href="https://www.softblue.com.br/site/curso/id/3/CURSO+DE+SQL+COMPLETO+BASICO+AO+AVANCADO+ON+LINE+BD03+GRATIS"
-                                target="_blank" title="Link para o curso">SQL Completo (2019)
-                                <i class="fas fa-external-link-alt"></i>
-                            </a>
-                        </li>
-                    </ul>
+                <ul class="ul-formacao-complementar">
+                    <li>
+                        <a href="https://www.softblue.com.br/site/curso/id/3/CURSO+DE+SQL+COMPLETO+BASICO+AO+AVANCADO+ON+LINE+BD03+GRATIS"
+                            target="_blank" title="Link para o curso">SQL Completo (2019)
+                            <i class="fas fa-external-link-alt"></i>
+                        </a>
+                    </li>
+                </ul>
         </section>
     </main>
     </script>
     <script src="js/carousel.js"></script>
-    <!-- <script src="../js/utils.js"></script> -->
+    <script src="js/utils.js"></script>
+    <script src="js/hideMenu.js"></script>
     <script src="js/main.js"></script>
 </body>
 
