--- a/index.html
+++ b/index.html
@@ -15,37 +15,6 @@
 
 <body id="body">
     <header class="header">
-        <div class="header-div">
-            <img src="imagens/avatares/avatar01.png" id="contato-img" class="header-avatar-img">
-            <h1>Bruno Pereira</h1>
-        </div>
-        <nav class="header-nav-menu">
-            <ul header-ul>
-                <li>
-                    <a href="https://www.linkedin.com/in/brunopereira-2331/" target="_blank">
-                        <i class="fab fa-linkedin fa-fw"></i>Linkedin
-                    </a>
-                </li>
-                <li>
-                    <a href="https://github.com/BrunoPereira-2331" target="_blank">
-                        <i class="fab fa-github fa-fw"></i>Github
-                    </a>
-                </li>
-                <li>
-                    <a href="mailto:brunopereira.19@hotmail.com">
-                        <i class="fas fa-envelope fa-fw"></i>brunopereira.19@hotmail.com
-                    </a>
-                </li>
-                <li>
-                    <i class="fas fa-mobile-alt fa-fw"></i>(51)999341544
-                </li>
-                <li>
-                    <a href="https://wa.me/send?phone=5551999341544" target="_blank">
-                        <i class="fab fa-whatsapp fa-fw"></i>Me envie uma mensagem
-                    </a>
-                </li>
-            </ul>
-        </nav>
         <div class="header-hide-menu">
             <div class="header-button-hide-menu">
                 <i class="fas fa-bars"></i>
@@ -78,7 +47,37 @@
                 </ul>
             </div>
         </div>
-
+        <nav class="header-nav-menu">
+            <ul header-ul>
+                <li>
+                    <a href="https://www.linkedin.com/in/brunopereira-2331/" target="_blank">
+                        <i class="fab fa-linkedin fa-fw"></i>Linkedin
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/BrunoPereira-2331" target="_blank">
+                        <i class="fab fa-github fa-fw"></i>Github
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:brunopereira.19@hotmail.com">
+                        <i class="fas fa-envelope fa-fw"></i>brunopereira.19@hotmail.com
+                    </a>
+                </li>
+                <li>
+                    <i class="fas fa-mobile-alt fa-fw"></i>(51)999341544
+                </li>
+                <li>
+                    <a href="https://wa.me/send?phone=5551999341544" target="_blank">
+                        <i class="fab fa-whatsapp fa-fw"></i>Me envie uma mensagem
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="header-div">
+            <img src="imagens/avatares/avatar01.png" id="contato-img" class="header-avatar-img">
+            <h1>Bruno Pereira</h1>
+        </div>
         <section class="header-section">
             <h1 class="h1">Quem sou</h1>
             <p>Meu nome é Bruno Pereira, tenho 20 anos, solteiro, sem filhos e estou cursando análise e
@@ -99,7 +98,7 @@
             <h2 class="h2">Experiencias</h2>
             <div class="experiencias-div-container">
                 <span class="button experiencias-btn-left"><i class="fas fa-angle-left"></i></span>
-                <div experiencias-div-slide>
+                <div experiencias-div-slide class="under">
                     <div class="show">
                         <h3 class="h3">NTConsult</h3>
                         <h4 class="h4">Cargo: Estagiario</h4>
@@ -114,7 +113,7 @@
                             Apontamento textual de inconformidades encontradas,
                             Registro das informações encontradas em planilhas e documentos específicos.
                         </p>
-                    </div>
+                    </div class="under">
                     <div class="show">
                         <h3 class="h3">Grupo Dimed</h3>
                         <h4 class="h4">Cargo: Jovem Aprendiz</h4>
