--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="header-button-hide-menu">
                 <i class="fas fa-bars"></i>
             </div>
-            <div class="header-items-hide-menu">
+            <div class="header-items-hide-menu" header-items-div-hide-menu>
                 <ul header-ul-hide-menu>
                     <li>
                         <a href="https://www.linkedin.com/in/brunopereira-2331/" target="_blank">
@@ -79,7 +79,7 @@
             <h1>Bruno Pereira</h1>
         </div>
         <section class="header-section">
-            <h1 class="h1">Quem sou</h1>
+            <h1>Quem sou</h1>
             <p>Meu nome é Bruno Pereira, tenho 20 anos, solteiro, sem filhos e estou cursando análise e
                 desenvolvimento de sistemas EAD, estou no ultimo semestre.
                 Desde de pequeno gostava da parte de hardware do computador, mas após um tempo na faculdade
@@ -95,13 +95,13 @@
     </header>
     <main>
         <section class="experiencias-section">
-            <h2 class="h2">Experiencias</h2>
+            <h2 class="experiencias-h2">Experiencias</h2>
             <div class="experiencias-div-container">
                 <span class="button experiencias-btn-left"><i class="fas fa-angle-left"></i></span>
                 <div experiencias-div-slide class="under">
                     <div class="show">
-                        <h3 class="h3">NTConsult</h3>
-                        <h4 class="h4">Cargo: Estagiario</h4>
+                        <h3>NTConsult</h3>
+                        <h4>Cargo: Estagiario</h4>
                         <p>Data de entrada: 10/12/2018 & Data de saida: 15/04/2019</p>
                         <p class="experiencia-p-desc">Durante esse periodo tive as seguintes atribuições: Análise de
                             consistência de registros de
@@ -115,8 +115,8 @@
                         </p>
                     </div class="under">
                     <div class="show">
-                        <h3 class="h3">Grupo Dimed</h3>
-                        <h4 class="h4">Cargo: Jovem Aprendiz</h4>
+                        <h3>Grupo Dimed</h3>
+                        <h4>Cargo: Jovem Aprendiz</h4>
                         <p>Data de entrada: 13/03/2017 & Data de saida: 26/03/2018</p>
                         <p class="experiencia-p-desc">Durante esse periodo tive as seguintes atribuições: Recebimento e
                             triagem dos produtos,
@@ -129,9 +129,9 @@
             </div>
         </section>
         <section class="formacao-complementar-section">
-            <h3 class="h3">Formações complementares relevantes</h3>
-            <div>
-                <h4 class="h4">Cursos(Online) - Udemy</h4>
+            <h3 class="formacao-complementar-h3">Formações complementares relevantes</h3>
+            <div formacao-complementar-div>
+                <h4>Cursos(Online) - Udemy</h4>
                 <ul class="ul-formacao-complementar">
                     <li>
                         <a href="https://www.udemy.com/course/java-curso-completo/" target="_blank"
@@ -165,7 +165,7 @@
                     </li>
 
                 </ul>
-                <h5 class="h5">Cursos(Online) - Softblue</h5>
+                <h5>Cursos(Online) - Softblue</h5>
                 <ul class="ul-formacao-complementar">
                     <li>
                         <a href="https://www.softblue.com.br/site/curso/id/3/CURSO+DE+SQL+COMPLETO+BASICO+AO+AVANCADO+ON+LINE+BD03+GRATIS"
