--- a/index.html
+++ b/index.html
@@ -83,13 +83,12 @@
             <p>Meu nome é Bruno Pereira, tenho 20 anos, solteiro, sem filhos e estou cursando análise e
                 desenvolvimento de sistemas EAD, estou no ultimo semestre.
                 Desde de pequeno gostava da parte de hardware do computador, mas após um tempo na faculdade
-                comecei
-                a me interessar pela parte de desenvolvimento.</br>
+                comecei a me interessar pela parte de desenvolvimento. A tecnologia que estou estudando atualmente é
+                javascript</br>
                 No ultimo estágio que participei, pensei que iria ter um contato maior com tecnologia, porém foi
-                uma
-                experiencia mais administrativa do que propriamente tecnológica.</br>
+                uma experiencia mais administrativa do que propriamente tecnológica.</br>
                 Tenho conhecimento em algumas tecnologias como java, Spring Framework, Junit,
-                HTML5, CSS, Github. Possuo conhecimento em inglês nivel básico/intermediario.
+                HTML5, CSS, Javascript, Github. Possuo conhecimento em inglês nivel básico/intermediario.
             </p>
         </section>
     </header>
