--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 desenvolvimento de sistemas EAD, estou no ultimo semestre.
                 Desde de pequeno gostava da parte de hardware do computador, mas após um tempo na faculdade
                 comecei a me interessar pela parte de desenvolvimento. A tecnologia que estou estudando atualmente é
-                javascript</br>
+                javascript, e junto a ele estou aprendendo React</br>
                 No ultimo estágio que participei, pensei que iria ter um contato maior com tecnologia, porém foi
                 uma experiencia mais administrativa do que propriamente tecnológica.</br>
                 Tenho conhecimento em algumas tecnologias como java, Spring Framework, Junit,
