--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
+    <script src="/js/jquery/jquery-3.6.0.min.js"></script>
 
+    <script>
+      $(function () {
+
+        });
+    </script>
+    <style>
+      .current-company-name:hover {
+        color: rgb(218, 107, 4);
+      }
+    </style>
 </head>
 
 <body id="body">
@@ -80,15 +91,14 @@
         </div>
         <section class="header-section">
             <h1>Quem sou</h1>
-            <p>Meu nome é Bruno Pereira, tenho 20 anos, solteiro, sem filhos e estou cursando análise e
+            <p>Meu nome é Bruno Pereira, tenho 21 anos, solteiro, sem filhos e estou cursando análise e
                 desenvolvimento de sistemas EAD, estou no ultimo semestre.
-                Desde de pequeno gostava da parte de hardware do computador, mas após um tempo na faculdade
-                comecei a me interessar pela parte de desenvolvimento. A tecnologia que estou estudando atualmente é
-                javascript, e junto a ele estou aprendendo React</br>
-                No ultimo estágio que participei, pensei que iria ter um contato maior com tecnologia, porém foi
-                uma experiencia mais administrativa do que propriamente tecnológica.</br>
-                Tenho conhecimento em algumas tecnologias como java, Spring Framework, Junit,
-                HTML5, CSS, Javascript, Github. Possuo conhecimento em inglês nivel básico/intermediario.
+                Comecei a conhecer e me interessar pela parte de desenvolvimento de software durante minha graduação, comecei meus estudos por Java
+                no backend, mas acabei começando minha jornada como desenvolvedor usando React no front-end.</br>
+                Atualmente, estou atuando como Software Developer na empresa <a href="https://brudam.com.br/" class="no-style-link current-company-name" >Brudam <i class="fas fa-external-link-alt"></i></a><br>
+                Trabalho com tecnologias como PHP, Javascript, Jquery, HTML, CSS, MySql e Github.<br>
+                Tenho conhecimento em tecnologias como Javascript, PHP, Jquery, HTML5, CSS, React, Github, java, Spring Framework.
+                Possuo conhecimento em inglês nivel básico/intermediario.
             </p>
         </section>
     </header>
@@ -98,6 +108,15 @@
             <div class="experiencias-div-container">
                 <span class="button experiencias-btn-left"><i class="fas fa-angle-left"></i></span>
                 <div experiencias-div-slide class="under">
+                  <div class="show">
+                    <h3>Brudam</h3>
+                    <h4>Cargo: Software Developer</h4>
+                    <p>Data de entrada: 25/11/2020</p>
+                    <p class="experiencia-p-desc">
+                      Desenvolvo novas funcionalidades, corrijo bugs e faço melhorias conforme os chamados que recebo na minha sprint semanal.<br>
+                      O sistema é desenvolvido em PHP, Javascript e MySql.
+                    </p>
+                </div class="under">
                     <div class="show">
                         <h3>NTConsult</h3>
                         <h4>Cargo: Estagiario</h4>
@@ -155,14 +174,6 @@
                             Moderno Completo com JavaScript (Em progresso)
                             <i class="fas fa-external-link-alt"></i>
                         </a></li>
-                    <li>
-                        <a href="https://www.udemy.com/course/design-de-apis-restful-com-tdd-spring-boot-e-junit-5/"
-                            target="_blank" title="Link para o curso">Design de API's RestFul com Spring Boot, TDD e
-                            JUnit5 (Em progresso)
-                            <i class="fas fa-external-link-alt"></i>
-                        </a>
-                    </li>
-
                 </ul>
                 <h5>Cursos(Online) - Softblue</h5>
                 <ul class="ul-formacao-complementar">
