--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
             </ul>
         </nav>
         <div class="header-div">
-            <img src="imagens/avatares/avatar01.png" id="contato-img" class="header-avatar-img">
+            <img src="https://avatars.githubusercontent.com/u/55865619?v=4" id="contato-img" class="header-avatar-img">
             <h1>Bruno Pereira</h1>
         </div>
         <section class="header-section">
