--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,16 @@
     <title>Bruno Pereira</title>
     <meta charset="utf-8">
     <meta name="author" content="Bruno Pereira">
-    <meta name="description" content="Descri&ccedil;&atilde;o de caracteristicas, habilidades e experiencias.">
+    <meta name="description" content="Portfolio">
     <meta name="keywords" content="Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css.map">
     <link href="../fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
-    <script src="./js/jquery-3.6.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js.map"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
     <script defer>
         (function () {
         })()
@@ -20,9 +23,7 @@
         .current-company-name:hover {
             color: rgb(218, 107, 4);
         }
-
         .header {
-            grid-area: header;
             display: flex;
             align-items: center;
             height: 100vh;
@@ -33,68 +34,102 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
-
         .header-container {
             display: flex;
             align-items: center;
         }
-
         .header-container-content {
             display: flex;
             justify-content: space-between;
 
         }
-
         .header-container-avatar {
             display: flex;
             flex-direction: column;
             align-items: center;
         }
-
         .container-avatar-img {
             display: flex;
             justify-content: center;
         }
-
         .section-info {
             width: 90%;
             border-radius: 25px;
         }
-
         .section-info p {
             width: 90%;
             border-radius: 25px;
             background-color: rgba(37, 37, 37, 0.9);
         }
-
         .container-section-info {
             align-self: center;
             width: 80%;
         }
+        #body nav {
+            background-color: rgba(37, 37, 37);
+        }
+        .en-img-button {
+            background-image: url("assets/images/flags/english-btn.png");
+            background-size: cover;
+        }
+        .pt-br-img-button {
+            /* background-image: url("assets/images/flags/brazil-btn.png"); */
+            background-size: cover;
+            background-position: 75% 50%;
+            /* background-blend-mode: soft-light; */
+        }
+
+
+        .flag-icon {
+            background-blend-mode: soft-light;
+            background-color: rgb(80, 80, 80);
+            background-position: center;
+            background-size: cover;
+            
+        }
+        .en-icon-flag {
+            background-image: url("assets/images/flags/english-btn.png");
+        }
+        .en-icon-flag:hover {
+            background-color: rgba(150, 150, 150, 0.4);
+        }
+        .pt-br-icon-flag {
+            background-image: url("assets/images/flags/brazil-btn.png");
+        }
+        .pt-br-icon-flag:hover {
+            background-color: rgba(150, 150, 150, 0.4);
+        }
+        
     </style>
 </head>
 
 <body id="body">
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark">
         <div class="container-fluid">
-            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false"
+            <button 
+                class="navbar-toggler" type="button" 
+                data-bs-toggle="collapse" data-bs-target="#navbar-menu" 
+                aria-controls="navbar-menu" aria-expanded="false" 
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="navbar-collapse collapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <div class="navbar-collapse collapse" id="navbar-menu">
+                <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/BrunoPereira-2331" target="_blank"><i class="fab fa-github mr-1"></i>Github</a>
+                        <a class="nav-link" href="https://github.com/BrunoPereira-2331" target="_blank"><i class="fab fa-github me-1"></i>Github</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/in/brunopereira-2331" target="_blank"><i class="fab fa-linkedin mr-1"></i>Linkedin</a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/brunopereira-2331" target="_blank"><i class="fab fa-linkedin me-1"></i>Linkedin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="mailto:brunopereira.19@hotmail.com" target="_blank"><i class="fas fa-envelope fa-fw"></i>brunopereira.19@hotmail.com</a>
+                        <a class="nav-link" href="mailto:brunopereira.19@hotmail.com" target="_blank"><i class="fas fa-envelope fa-fw me-1"></i>brunopereira.19@hotmail.com</a>
                     </li>
                 </ul>
+                <div class="d-flex">
+                    <a class="nav-link flag-icon en-icon-flag rounded me-2" href="#" target="_blank" title="ingl&ecirc;s"></a>
+                    <a class="nav-link flag-icon pt-br-icon-flag rounded" href="#" target="_blank" title="Portugu&ecirc;s"></a>
+                </div>
             </div>
         </div>
     </nav>
